--- a/sketchpad/src/components/aesthetic/sketchpadLayout.css
+++ b/sketchpad/src/components/aesthetic/sketchpadLayout.css
@@ -1,10 +1,12 @@
 .light {
   min-height: 100vh;
+  min-width: 100vw;
   background-color: rgb(187, 187, 187);
 }
 
 .dark {
   min-height: 100vh;
+  min-width: 100vw;
   background-color: rgb(29, 33, 36);
   color: white;
 }
